WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104036
[User Timing] Fix clang build by removing need for exit time destructor
https://bugs.webkit.org/show_bug.cgi?id=104036
Summary
[User Timing] Fix clang build by removing need for exit time destructor
James Simonsen
Reported
2012-12-04 13:41:07 PST
[User Timing] Fix clang build by removing need for exit time destructor
Attachments
Patch
(7.10 KB, patch)
2012-12-04 13:58 PST
,
James Simonsen
tonyg
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Simonsen
Comment 1
2012-12-04 13:58:55 PST
Created
attachment 177548
[details]
Patch
James Simonsen
Comment 2
2012-12-04 14:05:32 PST
Committed
r136565
: <
http://trac.webkit.org/changeset/136565
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug