[User Timing] Fix clang build by removing need for exit time destructor https://bugs.webkit.org/show_bug.cgi?id=104036

Reviewed by Tony Gentilcore.

Modeled after r99588.

No new tests. No change in functionality.

* page/PerformanceUserTiming.cpp:
(WebCore::UserTiming::UserTiming):
(WebCore::UserTiming::mark):
(WebCore::UserTiming::findExistingMarkStartTime):
* page/PerformanceUserTiming.h:
(UserTiming):

Canonical link: https://commits.webkit.org/122150@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136565 268f45cc-cd09-0410-ab3c-d52691b4dbfc